--- a/index.html
+++ b/index.html
@@ -9,11 +9,127 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Hello panda commerce site</h1>
+    <!-- Header start  -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                  <img class="img-fluid" src="images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Subscribe</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <!-- image slider  -->
+          <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nobis porro cum eos. Tempora, ducimus.</p>
+                                <h1>$500.0</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid" src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                    </div>
+                    </div>
+                  <div class="carousel-item">
+                    <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>Cool Dude Headphone</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nobis porro cum eos. Tempora, ducimus.</p>
+                            <h1>$800.0</h1>
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img class="img-fluid" src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>Cool Dude Headphone</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nobis porro cum eos. Tempora, ducimus.</p>
+                            <h1>$1000.0</h1>
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img class="img-fluid" src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
+
+    </header>
+
+    <main>
+        <!-- Catagories  -->
+        <section class="container my-5">
+            <div class="row g-4">
+                  <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img class="img-fluid" src="images/categories/watch.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 bg-primary d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img class="img-fluid" src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 
 
 
 
+
+
+
+<!-- bootstrap script  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
